--- a/LearningNUnit/LearningNUnit.csproj
+++ b/LearningNUnit/LearningNUnit.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit.Allure" Version="1.2.1.1" />
@@ -18,6 +19,14 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Should" Version="1.1.20" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="BackEnd\Requests\Requests.cs" />
+    <Compile Remove="BackEnd\Entities\NasaEntities.cs" />
+  </ItemGroup>
+
+
 
 </Project>
